# sol-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  test_helper.rs
src/math/: algebra.rs  arithmetic.rs  discrete.rs  mod.rs  numbers.rs  utils.rs
src/math/geometry/: circle.rs  distance.rs  intersections.rs  line.rs  mod.rs  point.rs  polygon.rs  shape.rs  transform.rs
src/math/linear_algebra/: linalg.rs  matrix.rs  mod.rs  tensor.rs  vector.rs
src/math/numbers/: abs.rs  mod.rs  number.rs  power.rs  round.rs
src/math/trigonometry/: mod.rs
src/meteorology/: pressure.rs
src/units/: angle.rs  bearing.rs  coordinate.rs  distance.rs  mod.rs  pressure.rs  quantity.rs  temperature.rs  time.rs  volume.rs  weight.rs
